# eros

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.py  config.py  config.yaml  eros_mcp_server.py  main.py  pyproject.toml  requirements.txt  telegram_bot.py
.github/workflows/: test.yml
memory/: rooms.py
tests/: test_agent.py  test_export.py  test_file_ops.py  test_image_input.py  test_interaction.py  test_mcp.py  test_mcp_server.py  test_memory.py  test_model_picker.py  test_model_switch.py  test_ollama_connection.py  test_permissions.py  test_reliability.py  test_retry.py  test_stream_ollama_format.py  test_telegram_startup.py  test_templates.py
tools/: __init__.py  base.py  bash.py  file_ops.py  git.py  interaction.py  mcp.py  permissions.py  reliability.py  web.py
ui/: console.py  input.py  picker.py
