[project]
name = "eros"
version = "0.1.0"
description = "A local AI agent CLI powered by Ollama"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
eros = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "tools/*.py", "ui/*.py", "memory/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
